# texlive-wasm

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .tool-versions  CLAUDE.md  LICENSE  LICENSE.TL  README.md  package-lock.json  package.json  plan.md  tsconfig.build.json  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.github/workflows/: ci.yml  (+4 more)
demo/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: tauri-mobile.md
engine/: Dockerfile  Makefile  README.md
examples/tauri/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri/src-tauri/capabilities/: default.json
examples/tauri/src-tauri/icons/: .gitkeep
examples/tauri/src-tauri/src/: lib.rs  main.rs
scripts/: build-bundle.ts  build-fmt.mjs  build-lualatex-fmt.mjs  build-manifest.ts  build-xelatex-fmt.mjs  check-biber-lockstep.mjs  cli.cjs  download-tl-source.sh  ensure-assets.mjs  fetch-tds.sh  optimize-wasm.sh  pack-release.mjs  pack-tds.mjs  smoke-all.mjs  smoke-biber.mjs  smoke-biblatex.mjs  smoke-bibtexu.mjs  smoke-csl.mjs  smoke-extras.mjs  smoke-lazy.mjs  smoke-lualatex.mjs  smoke-makeindex.mjs  smoke-pdflatex.mjs  smoke-tiered.mjs  smoke-wasi-compile.mjs  smoke-wasi.mjs  smoke-xelatex.mjs  validate-artifacts.mjs
src/: index.test.ts  index.ts  tauri.ts
test/: build-manifest.test.ts  bundlefs.test.ts  cpan-lock.test.ts  helpers.ts  latexmk-config.test.ts  latexmk.test.ts  lsr.test.ts  manager.test.ts  manifest.test.ts  paths.test.ts  synctex.test.ts  tar.test.ts  taurifs.test.ts  worker-fs.ts  worker.test.ts
(+88 files in other folders)
